# Agentic-Story-Telling

./: .gitignore  Version-1.ipynb  Version-2.ipynb  Version-3.ipynb  all_unmerged_changes.txt  example_story_change.diff  proof_of_concept.ipynb  pyproject.toml  pytest.ini
backend/: README.md  pyproject.toml
backend/src/backend/: __init__.py  dependencies.py  errors.py  index_markdown.py  logging_utils.py  main.py  runtime_settings.py  schemas.py  temp_storage.py
backend/src/backend/routes/: element_detail.py  elements_index.py  event_detail.py  events_index.py  settings.py
backend/src/backend/services/: __init__.py  detail_review.py  elements_index_logic.py  harness_service.py  provenance.py  stub_payloads.py
backend/tests/: conftest.py  test_backend_api.py  test_backend_dependencies.py  test_backend_detail_review.py  test_backend_elements_index_logic.py  test_backend_harness_service.py  test_backend_schemas.py  test_backend_temp_storage.py
docs/: HLD-world-model-integration.md
frontend/editor-app/: README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
story/: elements-old.md  elements.md  events.md  time.md
story/elements-old/: elt_0302285ec15e.md  elt_0b701b62514a.md  elt_10458a6f97c0.md  elt_1d1c7c76756e.md  elt_251c313f164a.md  elt_333cc7b06453.md  elt_37dcb83f2663.md  elt_4d5ba61a4884.md  elt_50b1a9dd537d.md  elt_5776327dc313.md  elt_584b0611209b.md  elt_5fd5b7cea1ae.md  elt_6ad4c9d565e1.md  elt_94a3d3a6d9b7.md  elt_9761d43a7212.md  elt_a9954f847616.md  (+8 more)
tests/: conftest.py  test_story_fixtures.py
(+82 files in other folders)
